--- a/style.css
+++ b/style.css
@@ -10,3 +10,23 @@ body {
 header {
   color: #ffbf46;
 }
+
+/* Hero Section */
+
+.latest--sec--left {
+  background-color: rgb(255, 191, 70);
+  min-height: 500px;
+}
+
+.latest--sec--left h1 {
+  color: #026435;
+}
+
+.latest--sec--left p {
+  color: #026435;
+  font-family: "Maven Pro", sans-serif;
+}
+
+.latest--blog--posts {
+  background-color: #ffbf46;
+}
