--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400..900&family=Orbitron:wght@400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 body {
-  background-color: #026435;
+  background-color: #014d28;
   font-family: "Orbitron", sans-serif;
 }
 
@@ -56,11 +56,11 @@ header {
 
 .article--section {
   background-image: linear-gradient(
-      rgba(126, 97, 40, 0.858),
-      rgba(49, 40, 22, 0.604)
+      rgba(143, 111, 45, 0.752),
+      rgba(149, 107, 29, 0.891)
     ),
     url("https://images.unsplash.com/photo-1436262513933-a0b06755c784?q=80&w=2942&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
-  height: 80vh;
+  height: auto;
   background-position: bottom;
   background-size: cover;
 }
@@ -70,18 +70,29 @@ header {
 }
 
 .right--article {
-  min-height: 250px;
+  background-color: rgba(2, 68, 36, 0.626);
 }
+
+.right--article h3 {
+  background-color: #ffbf46;
+}
+
+.right--articl--container {
+}
+
+/* Left Card */
 
 .left--article {
-  min-height: 250px;
-}
-
-.right--article {
-  min-height: 250px;
+  height: auto;
 }
 
 .left--card {
-  background-color: rgba(2, 100, 53, 0.71);
+  background-color: rgba(2, 68, 36, 0.71);
+  color: #ffbf46;
+}
+
+/* Footer */
+
+footer {
   color: #ffbf46;
 }
