--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
 
 .top--section {
   background-image: linear-gradient(
-      rgba(6, 47, 27, 0.715),
-      rgba(4, 27, 16, 0.817)
+      rgba(6, 47, 27, 0.505),
+      rgba(4, 27, 16, 0.682)
     ),
     url("https://images.unsplash.com/photo-1495106245177-55dc6f43e83f?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-position: center;
@@ -56,8 +56,8 @@ header {
 
 .article--section {
   background-image: linear-gradient(
-      rgba(143, 111, 45, 0.752),
-      rgba(149, 107, 29, 0.891)
+      rgba(143, 110, 45, 0.331),
+      rgba(149, 107, 29, 0.471)
     ),
     url("https://images.unsplash.com/photo-1436262513933-a0b06755c784?q=80&w=2942&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   height: auto;
@@ -70,14 +70,26 @@ header {
 }
 
 .right--article {
-  background-color: rgba(2, 68, 36, 0.626);
+  background-image: linear-gradient(
+      rgba(2, 68, 36, 0.626),
+      rgba(2, 68, 36, 0.626)
+    ),
+    url("https://images.unsplash.com/photo-1505330622279-bf7d7fc918f4?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-position: center;
+  background-size: cover;
 }
 
 .right--article h3 {
   background-color: #ffbf46;
 }
 
-.right--articl--container {
+.right--article li {
+  background-color: hsla(151, 97%, 15%, 0.683);
+  color: #ffbf46;
+}
+.right--article li:hover {
+  background-color: #367d3d;
+  color: #ffbf46;
 }
 
 /* Left Card */
