--- a/style.css
+++ b/style.css
@@ -1,35 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400..900&family=Orbitron:wght@400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 body {
-  background-color: #014d28;
+  background-color: rgba(244, 242, 242, 0.518);
   font-family: "Orbitron", sans-serif;
-}
-
-/* top--section */
-
-.top--section {
-  background-image: linear-gradient(
-      rgba(6, 47, 27, 0.505),
-      rgba(4, 27, 16, 0.682)
-    ),
-    url("https://images.unsplash.com/photo-1495106245177-55dc6f43e83f?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 /* Header Style */
 
 header {
-  color: #ffbf46;
+  color: #367d3d;
 }
 
 /* Hero Section */
 
 .latest--sec--left {
   background-image: linear-gradient(
-      rgba(11, 41, 27, 0.829),
-      rgba(13, 51, 33, 0.431)
+      rgba(11, 41, 27, 0.475),
+      rgba(13, 51, 33, 0.214)
     ),
     url("https://images.unsplash.com/photo-1517554558809-9b4971b38f39?q=80&w=2304&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-position: center;
@@ -53,17 +40,6 @@ header {
 }
 
 /* Article section */
-
-.article--section {
-  background-image: linear-gradient(
-      rgba(143, 110, 45, 0.331),
-      rgba(149, 107, 29, 0.471)
-    ),
-    url("https://images.unsplash.com/photo-1436262513933-a0b06755c784?q=80&w=2942&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
-  height: auto;
-  background-position: bottom;
-  background-size: cover;
-}
 
 .article--section h3 {
   color: #231f20;
@@ -107,4 +83,5 @@ header {
 
 footer {
   color: #ffbf46;
+  background-color: #367d3d;
 }
